apps/usenet/ombi/networkpolicies/egress-ombi.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-ombi
  namespace: usenet
spec:
  selector: app == 'ombi'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 80
          - 443
          - 587
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'sonarr'
        ports:
          - 8989
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'radarr'
        ports:
          - 7878
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'plex'
        ports:
          - 32400
